--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "body-parser": "^1.19.1",
+    "chart.js": "^3.7.1",
     "ejs": "^3.1.6",
     "express": "^4.17.2",
     "sequelize": "^6.17.0",
