--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "ejs": "^3.1.6",
     "express": "^4.17.2",
     "express-session": "^1.17.2",
+    "python-shell": "^3.0.1",
     "sequelize": "^6.17.0",
     "sqlite3": "^5.0.2"
   }
