--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.1",
     "chart.js": "^3.7.1",
+    "connect-flash": "^0.1.1",
     "connect-sqlite3": "^0.9.13",
     "ejs": "^3.1.6",
     "express": "^4.17.2",
